--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+</head>
 </head>
 <body>
+    <header>
+        <p>View High Scores</p>
+        <p>Time left</p>
+    </header>
+    <main>
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+        <button>Start Quiz</button>
+
+    </main>
     
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script type="text/javascript" src="assets/js/script.js"></script>
+
 </body>
 </html>
