added a few questions. started interval

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <p>View High Scores</p>
-        <p>Time left</p>
+        <p id="timeleft">Time left</p>
     </header>
     <main>
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-        <button>Start Quiz</button>
+        <button id="startbutton">Start Quiz</button>
 
     </main>
     
