--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <header>
         <p>View High Scores</p>
-        <p id="timeleft">Time left</p>
+        <p id="timetext">Time left</p>
     </header>
     <main>
-        <h1>Coding Quiz Challenge</h1>
-        <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-        <button id="startbutton">Start Quiz</button>
+        <div id="newquestion">
+            <h1 class="p">Coding Quiz Challenge</h1>
+            <p class="p">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <button id="startbutton" class="p">Start Quiz</button>
+        </div>
 
     </main>
     
