--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <p>View High Scores</p>
         <p id="timetext">Time left</p>
     </header>
-    <main>
+    <main class="whole">
         <div id="newquestion">
-            <h1 class="p">Coding Quiz Challenge</h1>
-            <p class="p">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-            <button id="startbutton" class="p">Start Quiz</button>
+            <h1 id="question">Coding Quiz Challenge</h1>
+            <p id="answers">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <button id="startbutton">Start Quiz</button>
         </div>
 
     </main>
