--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </header>
     <main class="whole">
         <div id="newquestion">
-            <h1 id="question">Coding Quiz Challenge</h1>
-            <p id="answers">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-            <button id="startbutton">Start Quiz</button>
+            <h1 id="question" class="a">Coding Quiz Challenge</h1>
+            <p id="answers" class="a">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <button id="startbutton" class="a">Start Quiz</button>
         </div>
 
     </main>
