time interval fixed. 10 second rule funtional

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="newquestion">
             <h1 id="question" class="a">Coding Quiz Challenge</h1>
             <p id="answers" class="a">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-            <button id="startbutton" class="a">Start Quiz</button>
+            <button id="startbutton" onclick="createlist()" class="a">Start Quiz</button>
         </div>
 
     </main>
