--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             <button id="startbutton" onclick="createlist()" class="a">Start Quiz</button>
         </div>
 
+        <div class="endgame">
+            <h2>Final Score:</h2>
+            <p class="finalscore"></p>
+            <p>Input your initials to save your score!</p>
+            <div>
+                <input type="text" size = "20" placeholder="ie: WW" name="intials" class="initials"/>
+                <button class="playagain">Restart Quiz</button>
+            </div>
+        </div>
+
     </main>
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
