--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
         <div class="endgame">
             <h2>Final Score:</h2>
+            <div class="input">
             <p class="finalscore"></p>
             <p>Input your initials to save your score!</p>
+            </div>
             <div>
                 <input type="text" size = "20" placeholder="ie: WW" name="intials" class="initials"/>
                 <button class="playagain">Restart Quiz</button>
