--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
             </div>
             <div>
                 <input type="text" size = "20" placeholder="ie: WW" name="intials" class="initials"/>
+                <button class="submitscore">Submit Score</button>
                 <button class="playagain">Restart Quiz</button>
             </div>
+        </div>
+
+        <div class="scoreboard">
+            <h2>High Scores</h2>
+            <ol class="scorelist">
+
+            </ol>
         </div>
 
     </main>
