highscores organized by top 5

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="scoreboard">
-            <h2>High Scores</h2>
+            <h2>Top 5 High Scores</h2>
             <ol class="scorelist">
 
             </ol>
