--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <p></p>
+        <button class="showboard">View High Scores</button>
         <p id="timetext">Time left</p>
     </header>
     <main class="whole">
